# google-earth-tiles

./: .gitignore  FUTURE.md  LICENSE  README.md  asahidake.yaml  example-config.yaml  fuji.yaml  furano.yaml  justfile  kamui-ski-links.yaml  main.py  niseko.yaml  pyproject.toml  resampling_test_summary.md  snapshot_verification.md  test_config.yaml
resources/: map_template.html
schemas/: config.schema.yaml
src/: cli.py  main.py
src/core/: base_tile_generator.py  config.py  geotiff_generator.py  kmz_generator.py  mbtiles_generator.py  tile_calculator.py  tile_downsampler.py  wmts_client.py
src/gui/: extent_widget.py  file_operations.py  main_window.py  map_widget.py  output_item_widget.py  settings_panel.py  tile_compositor.py  zoom_range_widget.py
src/gui/output_options/: __init__.py  geotiff_options_widget.py  kmz_options_widget.py  mbtiles_options_widget.py
src/models/: extent.py  extent_config.py  generated.py  generation_request.py  layer_composition.py  output_config.py  output_handler.py  outputs.py
src/outputs/: __init__.py  geotiff_output_handler.py  kmz_output_handler.py  mbtiles_output_handler.py
src/utils/: __init__.py  attribution.py  image_encoding.py  kml_extent.py
tests/: conftest.py  snapshot_helper.py  test_cli_args.py  test_core.py  test_integration.py  test_integration_geotiff.py  test_integration_kmz.py  test_integration_mbtiles.py  test_kml_utils.py
tests/fixtures/: test_extent_no_metadata.kml  test_extent_placemark_metadata.kml  test_extent_with_features.kml  test_extent_with_metadata.kml
tests/snapshots/: README.md  test_basic_single_layer_composite.kmz  test_blend_modes.kmz  test_custom_layer_sources.kmz  test_geotiff_basic_single_layer_lzw.tif  test_geotiff_deflate_compression.tif  test_geotiff_jpeg_compression.tif  test_geotiff_multi_zoom_no_pyramids.tif  test_geotiff_multi_zoom_with_pyramids.tif  test_geotiff_multiple_layers_blending.tif  test_geotiff_no_compression.tif  test_geotiff_separate_export_mode.tif  test_layer_enabled_disabled.kmz  test_lod_select_zooms.kmz  test_mbtiles_baselayer_type.mbtiles  test_mbtiles_basic_single_layer_png.mbtiles  test_mbtiles_jpeg_format.mbtiles  test_mbtiles_multi_zoom.mbtiles  test_mbtiles_multiple_layers_blending.mbtiles  test_mbtiles_separate_export_mode.mbtiles  test_multi_zoom_lod.kmz  test_multiple_layers_blending.kmz  test_separate_export_mode.kmz  test_web_compatible_mode.kmz  test_web_compatible_with_separate_layer.kmz
