[project]
name = "google-earth-tile-generator"
version = "0.1.0"
description = "A desktop application for generating KMZ files from WMTS tiles for Google Earth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.10.0",
    "PyQt6-WebEngine>=6.10.0",
    "simplekml>=1.3.6",
    "requests>=2.32.5",
    "aiohttp>=3.13.2",
    "pyproj>=3.7.2",
    "mercantile>=1.2.1",
    "Pillow>=12.0.0",
    "tqdm>=4.67.1",
    "PyYAML>=6.0.2",
]

[project.scripts]
google-earth-tiles = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"resources" = "share/google-earth-tile-generator/resources"
