[project]
name = "google-earth-tile-generator"
version = "0.1.0"
description = "A desktop application for generating KMZ files from WMTS tiles for Google Earth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.10.0",
    "PyQt6-WebEngine>=6.10.0",
    "simplekml>=1.3.6",
    "requests>=2.32.5",
    "aiohttp>=3.13.2",
    "pyproj>=3.7.2",
    "mercantile>=1.2.1",
    "Pillow>=12.0.0",
    "tqdm>=4.67.1",
    "PyYAML>=6.0.2",
    "numpy>=1.24.0",
    "GDAL>=3.12.0",
    "pydantic>=2.0.0",
    "jsonschema2md>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
google-earth-tiles = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"resources" = "share/google-earth-tile-generator/resources"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.7",
    "ruff>=0.14.10",
    "lxml>=6.0.2",
    "datamodel-code-generator>=0.26.0",
]

[tool.ty]
# Type checking configuration

[tool.ty.environment]
python-version = "3.11"  # Minimum supported version from requires-python

[tool.ty.src]
# Respect .gitignore and similar files for exclusions
respect-ignore-files = true

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Line length
line-length = 120

[tool.ruff.lint]
# Enable recommended rules + import sorting
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N802",  # Function name should be lowercase (PyQt uses camelCase for overrides)
    "N815",  # Variable in class scope should not be mixedCase (PyQt signals use camelCase)
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"
